fix: mobile cta headers text align left

--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -270,7 +270,7 @@
   margin: 1em 0 !important
   padding: 0.5em 0em
   width: fit-content
-  text-align: center
+  text-align: left
   grid-column: 1 / 3
 
 .carousel_container
